<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:layout_marginBottom="10dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="vertical"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear"
        android:background="@color/colorSecondary"
        android:orientation="vertical"
        android:transitionName="layout_transition"
        android:padding="@dimen/padding"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/nombreNadador"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:transitionName="initial_transition"
                android:textColor="@color/textColor"
                android:textSize="25dp"
                android:text="Nombre"/>
            <TextView
                android:id="@+id/nacionalidad"
                android:textSize="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="España"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_marginLeft="50dp"
                android:text="@string/edad"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/edadcard"
                android:text=" 22 años"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
            <TextView
                android:layout_marginLeft="50dp"
                android:text="@string/entrenamientos"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/totales"
                android:text=" 5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:text="@string/distancia_total"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"/>
            <TextView
                android:layout_marginLeft="5dp"
                android:id="@+id/distanciaTotal"
                android:text="22 k 22 metros"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
            <TextView
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tiempo_total"/>
            <TextView
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/tiempoTotal"
                android:text="3h 4 min 5 s"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:text="@string/velocidad_media"
                android:gravity="right"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="50km/h"
                android:layout_marginLeft="5dp"
                android:id="@+id/velocidadMedia"
                android:gravity="center"/>
        </LinearLayout>


    </LinearLayout>
</com.google.android.material.card.MaterialCardView>