<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:layout_marginBottom="10dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="vertical"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear"
        android:background="@color/colorSecondary"
        android:orientation="vertical"
        android:transitionName="layout_transition"
        android:padding="@dimen/padding"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
            android:id="@+id/nombrecard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:transitionName="initial_transition"
            android:textColor="@color/textColor"
            android:textSize="25dp"
            android:text="Nombre"/>
            <TextView
                android:id="@+id/fechaCard"
                android:textSize="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fecha"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:text="@string/duracioncard"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/horasCard"
                android:text=" 22 h 32 min 5 s,"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
            <TextView
                android:layout_marginLeft="5dp"
                android:text="@string/distanciaCard"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/kmCard"
                android:text=" 5 km 22 metros"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/piscinaCard"
                android:text="Piscina Grande"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"/>

            <Button
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                android:id="@+id/eliminar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/eliminar"
                android:textColor="#DDDDDD"
                android:transitionName="delete_button_transition"
                card_view:backgroundTint="@color/colorAccent" />

        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>